--- a/index.html
+++ b/index.html
@@ -196,42 +196,42 @@
 			<div class="all-pairs">
 
 				<div class="pair">
-					<img src="./assets/фото кроссовка.jpg" alt="sneaker">
+					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox"/>
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
-					<img src="./assets/фото кроссовка.jpg" alt="sneaker">
+					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox"/>
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
-					<img src="./assets/фото кроссовка.jpg" alt="sneaker">
+					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox"/>
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
-					<img src="./assets/фото кроссовка.jpg" alt="sneaker">
+					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox"/>
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
-					<img src="./assets/фото кроссовка.jpg" alt="sneaker">
+					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox"/>
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
-					<img src="./assets/фото кроссовка.jpg" alt="sneaker">
+					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox"/>
 						<label for="scales">кеды</label>
