--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -198,42 +198,42 @@
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
-						<input type="checkbox" class="checkbox"/>
+						<input type="checkbox" class="checkbox">
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
-						<input type="checkbox" class="checkbox"/>
+						<input type="checkbox" class="checkbox">
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
-						<input type="checkbox" class="checkbox"/>
+						<input type="checkbox" class="checkbox">
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
-						<input type="checkbox" class="checkbox"/>
+						<input type="checkbox" class="checkbox">
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
-						<input type="checkbox" class="checkbox"/>
+						<input type="checkbox" class="checkbox">
 						<label for="scales">кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
-						<input type="checkbox" class="checkbox"/>
+						<input type="checkbox" class="checkbox">
 						<label for="scales">кеды</label>
 					</div>
 				</div>
