--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 						<span>SneakMax</span>
 					</div>
 				</div>
-				<img src="./assets/Mask Group.png" alt="">
+				<img src="./assets/MaskGroup.png" alt="">
 			</div>
 		</section>
 		<section class="perfect-pair container">
@@ -199,42 +199,42 @@
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox">
-						<label for="scales">кеды</label>
+						<label>кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox">
-						<label for="scales">кеды</label>
+						<label>кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox">
-						<label for="scales">кеды</label>
+						<label>кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox">
-						<label for="scales">кеды</label>
+						<label>кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox">
-						<label for="scales">кеды</label>
+						<label>кеды</label>
 					</div>
 				</div>
 				<div class="pair">
 					<img src="./assets/photosneak.jpg" alt="sneaker">
 					<div class="pair_checkbox">
 						<input type="checkbox" class="checkbox">
-						<label for="scales">кеды</label>
+						<label>кеды</label>
 					</div>
 				</div>
 
